--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: wondrous_opentelemetry
 description: Explore the famous wonders of the world - Observed with Dartastic.io.
 publish_to: "none"
-version: 2.2.2+9
+version: 0.3.1
 
 environment:
   sdk: ^3.3.0
